Fix alignment issue in gift recommendation view

--- a/src/client/css/styles.css
+++ b/src/client/css/styles.css
@@ -474,18 +474,23 @@ li>a.nav-menu-item {
 /***********************************/
 
 .friend-header-container {
-  padding: 100px 20px 0 65px;
+  padding: 90px 0 0 0;
+}
+
+.friend-header {
+  padding: 0 10px 0 10%;
+  text-align: left;
 }
 
 .friend-header-name {
   font-family: "proxima-nova", sans-serif;
   text-align: left;
-  font-size: 1.0em;
+  font-size: 0.9em;
   color: #017E82;
 }
 
 .friend-header-bday {
-  font-size: 1.0em;
+  font-size: 0.8em;
   padding-bottom: 0px;
   font-weight: bold;
   color: #017E82;
